syntax = "proto3";

import "google/api/annotations.proto";


option go_package = "./proto";


package auth;

message GetMeRequest {
    string token = 1;
}

message UpdateMeRequest {
    string token = 1;
    string username = 2;
    string firstname = 3;
    string lastname = 4;
    string email = 5;
    string current_password = 6;
    string new_password = 7;
}

message MeResponse {
    string me = 1;
}

service UserService {
    rpc GetMe(GetMeRequest) returns (MeResponse) {
        option (google.api.http) = {
            get: "/v1/me"
        };
    };

    rpc UpdateMe(UpdateMeRequest) returns (MeResponse) {
        option (google.api.http) = {
            patch: "/v1/me"
        };
    };
}
